WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275280
REGRESSION (
273650@main
): Back forward list doesn’t have any webpage titles
https://bugs.webkit.org/show_bug.cgi?id=275280
Summary
REGRESSION (273650@main): Back forward list doesn’t have any webpage titles
Brady Eidson
Reported
2024-06-07 15:27:11 PDT
REGRESSION (
273650@main
): Back forward list doesn’t have any webpage titles
Attachments
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2024-06-07 15:27:17 PDT
<
rdar://problem/128448221
>
EWS
Comment 2
2024-06-07 17:34:07 PDT
Committed
279844@main
(443a65a4c3a2): <
https://commits.webkit.org/279844@main
> Reviewed commits have been landed. Closing PR #29643 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug