Source/WebCore/history/HistoryItem.h
@@ -74,9 +74,9 @@ class HistoryItem : public RefCounted<HistoryItem>, public CanMakeWeakPtr<Histor
 
 public:
     using Client = HistoryItemClient;
-    static Ref<HistoryItem> create(Client& client, const String& urlString = { }, std::optional<BackForwardItemIdentifier> identifier = { })
+    static Ref<HistoryItem> create(Client& client, const String& urlString = { }, const String& title = { }, const String& alternateTitle = { }, std::optional<BackForwardItemIdentifier> identifier = { })
     {
-        return adoptRef(*new HistoryItem(client, urlString, identifier));
+        return adoptRef(*new HistoryItem(client, urlString, title, alternateTitle, identifier));
     }
     
     WEBCORE_EXPORT ~HistoryItem();
@@ -93,10 +93,13 @@ public:
 
     WEBCORE_EXPORT const String& originalURLString() const;
     WEBCORE_EXPORT const String& urlString() const;
+    WEBCORE_EXPORT const String& title() const;
     
     bool isInBackForwardCache() const { return m_cachedPage.get(); }
     WEBCORE_EXPORT bool hasCachedPageExpired() const;
 
+    WEBCORE_EXPORT void setAlternateTitle(const String&);
+    WEBCORE_EXPORT const String& alternateTitle() const;
     
     WEBCORE_EXPORT URL url() const;
     WEBCORE_EXPORT URL originalURL() const;
@@ -133,6 +136,7 @@ public:
     WEBCORE_EXPORT void setReferrer(const String&);
     WEBCORE_EXPORT void setTarget(const AtomString&);
     void setFrameID(std::optional<FrameIdentifier> frameID) { m_frameID = frameID; }
+    WEBCORE_EXPORT void setTitle(const String&);
     WEBCORE_EXPORT void setIsTargetItem(bool);
     
     WEBCORE_EXPORT void setStateObject(RefPtr<SerializedScriptValue>&&);
@@ -220,7 +224,7 @@ public:
     void setPolicyContainer(const PolicyContainer& policyContainer) { m_policyContainer = policyContainer; }
 
 private:
-    WEBCORE_EXPORT HistoryItem(Client&, const String& urlString, std::optional<BackForwardItemIdentifier>);
+    WEBCORE_EXPORT HistoryItem(Client&, const String& urlString, const String& title, const String& alternateTitle, std::optional<BackForwardItemIdentifier>);
 
     void setCachedPage(std::unique_ptr<CachedPage>&&);
     std::unique_ptr<CachedPage> takeCachedPage();
@@ -236,7 +240,9 @@ private:
     String m_referrer;
     AtomString m_target;
     std::optional<FrameIdentifier> m_frameID;
-    
+    String m_title;
+    String m_displayTitle;
+
     IntPoint m_scrollPosition;
     float m_pageScaleFactor { 0 }; // 0 indicates "unset".
     Vector<AtomString> m_documentState;
